src/objects/Repayment_Calculator__c.object
<CustomObject>
    <description>CTI Payment Calculator for Templet report.</description>
    <fields>
        <fullName>Beginning_Balance__c</fullName>
        <description>prposals remaining payment Amount</description>
        <label>Beginning Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Reversed__c</fullName>
        <description>Begning balance * interest rate % /12</description>
        <label>Discount Reversed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ending_Balance__c</fullName>
        <description>Beginning Balance - principal Amount</description>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extra_Payment__c</fullName>
        <label>Extra Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>proposal.First payment date,
increment by 1 month for each sequence</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <description>Total Payment - Discount Recived</description>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Proposal</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Repayment Calculator</relationshipLabel>
        <relationshipName>Repayment_Calculator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Payment__c</fullName>
        <description>proposal  Scheduled monthly payments</description>
        <label>Scheduled Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>sequence of payment</description>
        <label>Sequence No</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <description>Scheduled Payment  +  Extra Payment</description>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Repayment Calculator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Repayment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Calculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>